_sass/website-cards.scss
/*
 * Copyright (c) 2017-2019, FusionAuth, All Rights Reserved
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
 * either express or implied. See the License for the specific
 * language governing permissions and limitations under the License.
 */

@import 'variables-functions-mixins';
@import 'website-variables';


/* Cards
–––––––––––––––––––––––––––––––––––––––––––––––––– */

.cards.row {
  > div {
    margin-bottom: 45px;
  }
}

.gray-split-card {
  background: $gray-1;
  border-radius: 5px;
  box-shadow: $website-shadow;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  margin-bottom: 10px;
  overflow: hidden;
  padding: 20px;
  text-align: center;

  a, a:hover, a:link, a:visited {
    color: black;
  }

  img {
    max-width: 120px;
  }

  footer {
    margin-top: auto;
  }

  header {
    margin: 20px 0 20px 0;

    h2 {
      font-size: 24px;
      font-weight: 600;
      min-height: 3em; // enough for two lines of h2 text
    }
  }

  .content {
    border-top: 1px solid $gray-3;
    padding-top: 30px;

    ul {
      list-style: none;
      margin: 0;
      padding: 0;

      li {
        margin-bottom: 20px;
      }
    }

    .rw-ui-container {
      margin-bottom: 10px;
    }
  }
}

.card {
  border-radius: 5px;
  box-shadow: $website-shadow;
  margin-bottom: 10px;
  overflow: hidden;
  padding: 20px;

  &.bordered {
    border: 1px solid $gray-2;
    box-shadow: none;
  }

  &.competitor {
    align-items: center;

    .image-container {
      align-items: center;
      display: flex;
      justify-content: center;
      min-height: 200px;

      img {
        display: block;
        max-height: 100px;
        max-width: 150px;
      }
    }

    .name {
      flex: 0;
      font-size: 20px;
      font-weight: 600;
      margin: 0 0 auto 0;
      padding: 0;
    }
  }

  &.customer {
    align-items: center;

    .image-container {
      align-items: center;
      display: flex;
      justify-content: center;
      min-height: 50px;

      img {
        display: block;
        max-height: 50px;
        max-width: 200px;
      }
    }

    .text-container {
      align-items: center; 
      text-align: center;
      display: flex;
      justify-content: center;
      min-height: 150px;
      font-weight: 600;
      font-size: 16px;
    }

    .link {
      flex: 0;
      font-size: 14px;
      font-weight: 600;
      margin: 0 0 auto 0;
      padding: 0;
      text-transform: uppercase;
      &:after {
        color: $orange-medium;
        content: " \2192";
      }
    }
  }

  &.even {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
  }

  &.gray {
    background: $gray-6;
    color: white;
  }

  &.light-gray {
    background: $gray-1;
    color: $body-font-color;
  }

  &.padded {
    padding: 30px 50px;
  }

  &.trading {
    align-items: center;
    width: 175px;

    img {
      max-width: 90px;
    }

    .name {
      color: $gray-6;
      font-weight: 600;
      margin: 25px 0 13px 0;
      text-align: center;
    }
  }

  &.white {
    background: white;
    color: $body-font-color;
  }

  footer {
    margin-top: 25px;
  }

  // These are semantic so it could be different levels but always the header
  h2, h3 {
    font-size: 24px;
    font-weight: 600;
  }

  header {
    display: flex;
    justify-content: space-between;

    a.button {
      margin-top: 0;
    }
  }

  .trunk {
    margin: auto;
    text-align: center;
    @include media(sm) {
      width: 65%;
    }
  }
}

.feature-card {
  &:not(:first-child) {
    padding-left: 0;

    @include media(lg) {
      padding-left: $grid-spacing;
    }
  }

  &:not(:last-child) {
    padding-right: 0;

    @include media(lg) {
      padding-right: $grid-spacing;
    }
  }

  footer {
    padding: 10px 10px 10px 0;
  }

  h2, h3 {
    font-size: 24px;
    font-weight: 600;
    margin-bottom: 0;
    margin-top: 30px;
  }

  h4 {
    font-size: 18px;
    margin-top: 30px;
  }

  img {
    width: 40px;
  }
}

.flat-card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-bottom: 10px;

  footer {
    padding: 10px;
  }

  h2, h3 {
    font-size: 24px;
    font-weight: 600;
  }

  .content {
    padding: 10px;

    h2 {
      margin-bottom: 0;
    }
  }
}

.quote-card {
  background: white;
  border-radius: 6px;
  box-shadow: $website-shadow;
  color: $body-font-color;
  margin-top: 40px !important;
  padding: 44px 22px 22px 22px;
  position: relative;
  text-align: center;
  width: 340px;

  img {
    border-radius: 50%;
    left: calc(50% - 35px);
    position: absolute;
    top: -35px;
    width: 70px;
  }

  .name {
    color: $gray-3;
    margin-bottom: 13px;
  }
}

